What's new in thtk 4:

thecl: Support for parsing of 16-bit values.
thecl: Support for TH07, TH08, and TH09 has been added.
thecl: The special syntax for encrypted strings was removed.
thdat: Support for TH13 has been added.
thmsg: Support for TH13 has been added.

What's new in thtk 3:

thecl: Double quotes in ECL files are now escaped.
thdat: Support for TH75 has been removed.
thanm: Files will compress faster, but use less efficient compression.
thmsg: A new program for extracting and recreating message files.
thtk: Text strings are no longer converted from their original character set.
thecl: The output format has been changed in ways that are not compatible with
       thtk 2.
thecl: Support for TH95 has been added.
thecl: Support for TH06 has been added.
thtk: Manual pages have been written to replace README.